# Cool-Project

./: README.md  chars.h  client.cpp  compile.sh  net.cpp  tempServer.cpp
Structure/: Addition 1  Structure.txt  mainGitCommands.txt
TP_Project/: CMakeLists.txt  NetException.cpp  NetException.h  client.cpp  server.cpp  sockets.cpp  sockets.h
doc/: UML_Diagram.mdj  db_adapter.hpp  doc.tex
